Fixed toolbar menu scrolling on mobile.
It wasn't possible to scroll the menu if it was initiated on
disabled item.

--- a/cms/static/cms/sass/components/_toolbar.scss
+++ b/cms/static/cms/sass/components/_toolbar.scss
@@ -131,7 +131,6 @@
             border-top: none;
             border-radius: 0 0 $toolbar-dropdown-border-radius $toolbar-dropdown-border-radius;
             background-color: $toolbar-dropdown-bgcolor;
-            background: rgba($toolbar-dropdown-bgcolor, 0.97);
             box-shadow: $toolbar-dropdown-shadow;
         }
         ul li {
